# orbital

./: .clang-format  .clang-tidy  .clangd  .editorconfig  DEVELOPMENT.md  meson.build  meson_options.txt
.qwen/: SKILL.md  settings.json
.zed/: debug.json  settings.json  tasks.json
assets/schema/: launch-filter.json  mangohud.json  mesa.json  nvidia.json  proton.json  radeon.json  vulkan.json  wine.json
cli/: meson.build
cli/src/: main.cpp  parser.cpp  parser.h
cli/src/commands/: env.cpp  library.cpp  prefix.cpp  preset.cpp  proton.cpp
draft/: PRD.md
gui/: meson.build
gui/qml/: main.qml
gui/qml/components/: ConflictResolver.qml  EnvVarWidget.qml  GameCard.qml  HeroView.qml
gui/qml/views/: GameDetailView.qml  LibraryView.qml  ProtonManagerView.qml  SettingsView.qml
gui/resources/: resources.qrc
gui/src/: main.cpp  qmlregister.cpp
gui/src/bridge/: envvarmodel.cpp  envvarmodel.h  librarymodel.cpp  librarymodel.h  protonmodel.cpp  protonmodel.h
lib/: meson.build
lib/include/orbital/: configstore.h  dbusinterface.h  dbusinterface.xml  envvarschema.h  gamelibrary.h  paths.h  prefixmanager.h  presetmanager.h  processlauncher.h  protondbclient.h  protonmanager.h  types.h
lib/src/: configstore.cpp  dbusinterface.cpp  envvarschema.cpp  gamelibrary.cpp  paths.cpp  prefixmanager.cpp  presetmanager.cpp  processlauncher.cpp  protondbclient.cpp  protonmanager.cpp
tests/: meson.build
tests/include/: test_envvarschema.h  test_gamelibrary.h  test_presetmerge.h
tests/src/: test_envvarschema.cpp  test_gamelibrary.cpp  test_presetmerge.cpp
